# letta-leaderboard

./: .gitignore  README.md  contributing.md  model_prices.csv  pyproject.toml  requirements.txt  run_all_benchmark.sh  run_all_experiments.sh  run_all_models.sh  run_letta_file_bench.py
data/: letta_memory_leaderboard.yaml
leaderboard/: agent.py  benchmark.py  evaluate.py  utils.py
leaderboard/letta_bench/: core_memory_agent.txt  letta_bench_benchmark.py  letta_bench_gen_200.jsonl
leaderboard/letta_file_bench/: README.md  agent_question_evaluator.py  agent_question_generator.py  config.py  config.yaml  letta_file_bench_benchmark.py  letta_file_bench_gen.py  question_generation_prompt.txt
leaderboard/letta_file_bench/data/: addresses.jsonl  addresses.txt  agent_generated_questions.jsonl  bank_accounts.jsonl  bank_accounts.txt  credit_cards.jsonl  credit_cards.txt  employments.jsonl  employments.txt  golden_answers.json  insurance_policies.jsonl  insurance_policies.txt  internet_accounts.jsonl  internet_accounts.txt  letta_file_bench.db  llm_generated_questions.jsonl  medical_records.jsonl  medical_records.txt  people.jsonl  people.txt  pets.jsonl  pets.txt  vehicles.jsonl  vehicles.txt
leaderboard/letta_file_bench/models/: __init__.py  agent_question_models.py  entities.py  question_models.py
leaderboard/letta_file_bench/prompts/: agent_system_prompt.j2  comparison_prompt.txt  evaluator_system_prompt.j2  multi_hop_prompt.txt  (+2 more)
leaderboard/llm_model_configs/: openai-gpt-5-mini.json
leaderboard/locomo/: locomo_agent.txt  locomo_benchmark.py
(+32 files in other folders)
